src/test/resources/semantic_errors/var_not_in_scope_after_funcall.notc
void main() {
    int x = 10;
    int i = fun();
}

int fun() {
    return x;
}
